fixed up landing but not responsive

--- a/smoker_tracker/frontend/src/index.css
+++ b/smoker_tracker/frontend/src/index.css
@@ -44,7 +44,7 @@ body {
   
 #root {
     display: block;
-    position:absolute;
+    /* position:absolute; */
     height:auto;
     bottom:0;
     top:0;
@@ -68,8 +68,13 @@ body {
 
 .nav {
     background: rgba(250,247,245,.77);
-    padding: 30px;
+    padding: 30px 0px 30px 0px;
 
+    display:flex;
+    /* position:fixed; */
+    position: absolute;
+    width:100%;
+    z-index: 99999;
     /* border-bottom: 4px double black; */
     /* background-image: url('./img/rust.jpg'); */
     /* box-shadow: inset 0px 0px 20px rgba(0,0,0,0.9); */
@@ -145,13 +150,8 @@ body {
     /*  Grid layout
     */
 .landing__body {
-    height: 80%;
-    z-index: 1;
-}
-
-.landing--bkg {
+    height: 100%;
     position: absolute;
-    z-index: -1;
     top: 0;
     bottom: 0;
     left: 0;
@@ -163,8 +163,21 @@ body {
     opacity: 1;
     filter: alpha(opacity=65);
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
+}
 
+.landing__div {
+    position:absolute;
+    left:0; right:0;
+    top:0; bottom:0;
+    margin:auto;
+
+    max-width:100%;
+    max-height:100%;
+    overflow:none;
+
+    width: 30%;
+    height: 35%;
 }
 
 /* ************************* */
@@ -175,16 +188,17 @@ body {
         jumbotron 
     */
 .jumbotron__div {
-    padding: 20px 0px 10px 0px;
-    width: 30%;
-    height: 35%;
-    opacity: 1;
+    padding: 0px;
+    padding-top:30px;
+    width: 20em;
+    height: 15em;
     border-radius: 25px;
 
-    position:absolute; /*it can be fixed too*/
+    /* position:absolute;
     left:0; right:0;
-    top:0; bottom:0;
-    margin:auto;
+    top:0    opacity: 1;
+; bottom:0;
+    margin:auto; */
 
     /*this to solve "the content will not be cut when the window is smaller than the content": */
     max-width:100%;
@@ -202,13 +216,36 @@ body {
 }
 
 .jumbotron__div__h1 {
+    margin-top: 0px;
+    margin-bottom: 0px;
     font-size: 5em;
     font-family: 'Anton', sans-serif;
 }
 
 .jumbotron__div__h2 {
     /* font-family: 'Fjalla One', sans-serif; */
+    margin-top: 0px;
     font-family: 'Acme', sans-serif;
+}
+
+.landing__divBtn {
+    width:20em;
+    margin-top: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.landing__div--btn {
+    border: 1px solid rgba(197, 30, 30, 0.294);
+    padding: .375rem .75rem;
+    background: rgba(250,247,245,.77);
+    color: rgba(197, 30, 30);
+    text-decoration: none;
+    border-radius: 25px;
+}
+.landing__div--btn:hover {
+    cursor:pointer;
 }
 
 
